[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cavermm"
version = "0.1.0"
description = "Sphere-by-sphere ligand minimization along tunnels using OpenMM"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
cavermm = "cavermm.cli:main"

