[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtunnel"
version = "0.1.0"
description = "Sphere-by-sphere ligand minimization along tunnels using OpenMM"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "openmm",
    "openmmforcefields",
    "openff-toolkit",
    "rdkit-pypi",
]

# Optional metadata (fill if desired)
# authors = [{ name = "", email = "" }]
# license = { file = "LICENSE" }
# urls = { homepage = "", repository = "" }

[project.scripts]
mdtunnel = "mdtunnel.cli:main"
